@@ -955,15 +955,17 @@ begin
                               *)
             end; // end case
           end; // reference or value
-
-          if not skip(',',remaining,remaining,errorstr) then
-            if skip(')',remaining,remaining,errorstr) then endOfParamlist := true
-            else
-            begin
-              // syntax error
-              errorstr := errorstr + ' , or ) expected.';
-              syntax_ok := false;
-            end;
+          if syntax_ok then
+          begin
+            if not skip(',',remaining,remaining,errorstr) then
+              if skip(')',remaining,remaining,errorstr) then endOfParamlist := true
+              else
+              begin
+                // syntax error
+                errorstr := errorstr + ' , or ) expected.';
+                syntax_ok := false;
+              end;
+          end; //syntax ok
         end; // remaining <> ''
       end; // while next paramstr
     end; // DFparamCount > 0;
@@ -982,6 +984,7 @@ var
   sectionresult : TSectionResult;
   funcindex : integer;
   searchindex : integer;
+  searchDFName : string;
 begin
   call := false;
   inc(inDefFuncLevel);
@@ -1038,7 +1041,11 @@ begin
   dec(inDefFuncLevel);
   searchindex := definedFunctionsCallStack.Count-1;
   if searchindex > -1 then
-    inDefFuncIndex := definedFunctionNames.IndexOf (definedFunctionsCallStack.Strings[searchindex])
+  begin
+    //searchDFName :=  definedFunctionsCallStack.Strings[searchindex];
+    //inDefFuncIndex := definedFunctionNames.IndexOf(searchDFName)
+    inDefFuncIndex := strtoint(definedFunctionsCallStack.Strings[searchindex]);
+  end
   else inDefFuncIndex := -1;
   //logdatei.log('We leave the defined function: inDefFunc3: '+IntToStr(inDefFunc3),LLInfo);
   LogDatei.log('We leave the defined function: '+DFName+' ; inDefFuncLevel: '+inttostr(inDefFuncLevel),LLDebug2);
