@@ -8,6 +8,9 @@ opsi-winst/opsi-script (4.12.0.20) stable; urgency=low
 
   * osparserhelper: GetWord: search backwards : / get from "hu)hu)))" as expr "hu)hu)" with remaining "))"
   * osparser: producestringlist: do not delete remaining after call of defined function
+  * osdefinedfunctions: parseCallParameter: better error messages
+  * osparserhelper: GetWord: trim expression ; fixes #3526
+  * osdefinedfunctions: call: set inDefFuncIndex on leaving function ; fixes #3528
 
 -- Detlef Oertel <d.oertel@uib.de>  Mon, 14 May 2018:15:00:00 +0200
 
